methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:21: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
  for(i2<- 0 to){
             ^