methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
	ligne(Color.YELLOW,Color.RED,Color.CYAN)
  retourligne()
  ligne2(Color.YELLOW,Color.ORANGE)
  ligne(Color.YELLOW,Color.PINK,Color.GREEN)
  droite()
  var i:Int=0
  droite()
  for(i<- 0 to 4){
    recule
  }
  
}

def ligne2(c:Color,p:Color){
  avance()
  avance()
  flower(c,p)
  droite()
  var i2:Int=0
  for(i2<- 0 to){
    recule()
  }
  droite()
  avance()
  avance()
  gauche()
}


def ligne(c:Color, p1:Color, p2:Color){
 	flower(c, p1)
  droite()
  avance()
  avance()
  avance()
  flower(c,p2)
}

def retourligne(){
  var i:Int=0
  droite()
  for(i<- 0 to 4){
    recule
  }
  droite()
  avance()
  avance()
	droite()
  
}

def flower(c:Color, p:Color){
  setCouleurBrosse(p)
	baisseBrosse()
  avance()
  avance()
  recule()
  gauche()
  avance()
  recule()
  recule()
  avance()
  setCouleurBrosse(c)
  marquerSol()
  
}


def marquerSol(){
  baisseBrosse()
  leveBrosse()
}